[tool.poetry]
name = "imhere"
version = "0.2.0"
description = "ImHere, simple log for simple debug"
authors = ["rojack96 <rojack96@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
